More supported file formats to load Generic utils are now in plugins folder Tank configs know asset bundle as well (Also, Destiny 2 hype)

--- a/Assets/StreamingAssets/Tanks collection/tank 4.yml
+++ b/Assets/StreamingAssets/Tanks collection/tank 4.yml
@@ -1,6 +1,7 @@
 name: "tank 4 name"
 type: "type 4"
 # visuals
+assetBundle: "AssetBundles/tanks"
 prefab: "Assets/Prefabs/Tanks/Tank 1.prefab"
 # physics
 mass: 50000 # kg
