--- a/Assets/StreamingAssets/Tanks collection/tank 2.yml
+++ b/Assets/StreamingAssets/Tanks collection/tank 2.yml
@@ -1,6 +1,7 @@
 name: "tank 2 name"
 type: "type 2"
 # visuals
+assetBundle: "AssetBundles/tanks"
 prefab: "Assets/Prefabs/Tanks/Tank 1.prefab"
 # physics
 mass: 50000 # kg
