config demo/hangar to be more easily built

--- a/Assets/Demo/Hangar/StreamingAssets/Tanks collection/tank 1.yml
+++ b/Assets/Demo/Hangar/StreamingAssets/Tanks collection/tank 1.yml
@@ -3,7 +3,7 @@ name: "Chieftain FV4201"
 type: "Main battle tank"
 # visuals
 assetBundle: "AssetBundles/tanks"
-prefab: "Assets/Prefabs/Tanks/Chieftain FV4201.prefab"
+prefab: "Assets/Demo/Hangar/AssetBundles/Tanks/Chieftain FV4201/Prefab.prefab"
 # physics
 mass: 55000 # kg
 speed: 13.3 # meters/sec
