--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.entities": "0.0.12-preview.6",
+    "com.unity.incrementalcompiler": "0.0.42-preview.1",
     "com.unity.package-manager-ui": "1.9.11",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
